// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`model/experiment updateSamplePosition rolls back if the parameters are invalid 1`] = `
Array [
  "(
        SELECT jsonb_insert(samples_order - 0, '{10000}', samples_order -> 0, false)
        FROM (
          SELECT (samples_order)
          FROM experiment e
          WHERE e.id = 'mockExperimentId'
        ) samples_order
      )",
]
`;

exports[`model/experiment updateSamplePosition rolls back if the result is invalid 1`] = `
Array [
  "(
        SELECT jsonb_insert(samples_order - 0, '{1}', samples_order -> 0, false)
        FROM (
          SELECT (samples_order)
          FROM experiment e
          WHERE e.id = 'mockExperimentId'
        ) samples_order
      )",
]
`;

exports[`model/experiment updateSamplePosition works correctly if valid params are passed 1`] = `
Array [
  "(
        SELECT jsonb_insert(samples_order - 0, '{1}', samples_order -> 0, false)
        FROM (
          SELECT (samples_order)
          FROM experiment e
          WHERE e.id = 'mockExperimentId'
        ) samples_order
      )",
]
`;
